--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -5,12 +5,18 @@ name: unit-test
 
 on:
   push:
+  workflow_run:
+    workflows: ["pre-commit"]
+    types:
+      - completed
 
 permissions:
   contents: read
 
 jobs:
   build:
+    # Check if the pre-commit workflow succeeded
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     runs-on: ubuntu-latest
 
