--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -1,7 +1,6 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
+# Combining pre-commit and unit-test into one workflow.
 
-name: unit-test
+name: CI
 
 on:
   push:
@@ -10,11 +9,23 @@ permissions:
   contents: read
 
 jobs:
-  build:
-
+  pre-commit:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout code
+    - uses: actions/checkout@v3
+    - name: Set up Python
+    - uses: actions/setup-python@v3
+    - name: Run pre-commit
+    - uses: pre-commit/action@v3.0.0
+
+  unit-test:
+    runs-on: ubuntu-latest
+    needs: pre-commit
+
+    steps:
+    - name: Checkout code
     - uses: actions/checkout@v3
     - name: Set up Python 3.11
       uses: actions/setup-python@v3
