--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -17,13 +17,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Set up Python
     - uses: actions/setup-python@v3
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pre-commit
     - name: Run pre-commit
-      run: |
-        pre-commit run --all-files
+    - uses: pre-commit/action@v3.0.0
 
   unit-test:
     runs-on: ubuntu-latest
