--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -14,11 +14,11 @@ jobs:
 
     steps:
     - name: Checkout code
-    - uses: actions/checkout@v3
+      uses: actions/checkout@v3
     - name: Set up Python
-    - uses: actions/setup-python@v3
+      uses: actions/setup-python@v3
     - name: Run pre-commit
-    - uses: pre-commit/action@v3.0.0
+      uses: pre-commit/action@v3.0.0
 
   unit-test:
     runs-on: ubuntu-latest
@@ -26,7 +26,7 @@ jobs:
 
     steps:
     - name: Checkout code
-    - uses: actions/checkout@v3
+      uses: actions/checkout@v3
     - name: Set up Python 3.11
       uses: actions/setup-python@v3
       with:
